[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "ocsm"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0", features = [ "serde" ] }
dioxus = "0"
dioxus-core = "0"
directories = "5"
itertools = "0"
freya = { git = "https://github.com/marc2332/freya" }
rfd = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "3"
strum = "0"
strum_macros = "0"

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
