[package]
name = "ocsm"
version = "0.1.0"
description = "An application for managing table top roleplaying game character sheets."
authors = [ "Peter Lunneberg <plunn.dev@gmail.com>" ]
license = ""
repository = ""
default-run = "ocsm"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "ocsm"
path = "src/main.rs"
