[package]
name = "ocsm"
version = "0.1.0"
description = "An application for managing table top roleplaying game character sheets."
authors = [ "Peter Lunneberg <plunn.dev@gmail.com>" ]
license = "MIT"
repository = ""
default-run = "ocsm"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = [ "derive" ] }
tauri = { version = "^1.0.0-beta.5", features = ["api-all", "menu", "wry"] }

[target."cfg(windows)".build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "ocsm"
path = "src/main.rs"
