[package]
name = "ocsm"
version = "0.5.0"
description = "An open source application for managing table top roleplaying game character sheets."
authors = [ "Peter Lunneberg <plunn.dev@gmail.com>" ]
license = "MIT"
repository = "https://bitbucket.org/nemesisx00/ocsm"
default-run = "ocsm"
edition = "2021"
build = "src/build.rs"

[dependencies]
rand = "^0.8.0"
serde_json = "^1.0"
serde = { version = "^1.0", features = [ "derive" ] }
tauri = { version = "^1.0.0-beta.8", features =["api-all"]}

[target."cfg(windows)".build-dependencies]
tauri-build = { version = "^1.0.0-beta.4" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "ocsm"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
