[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "ocsm-mta2e"
version = "0.1.0"
publish = false

[build-dependencies]
glib-build-tools = "0"

[dependencies]
gtk4 = { version = "0", features = [ "v4_16" ] }
widgets = { package = "ocsm-widgets", path = "../../shared/widgets" }
cofd = { package = "ocsm-cofd", path = "../../game-systems/cofd" }

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
