[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "ocsm-widgets"
version = "0.1.0"
publish = false

[build-dependencies]
glib-build-tools = "0"

[dependencies]
anyhow = "1"
chrono = { version = "0", features = [ "serde" ] }
gtk4 = { version = "0", features = [ "v4_16" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "3"

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
